Add backend files and resolve all changes

--- a/app/templates/aadhaar_details_page.html
+++ b/app/templates/aadhaar_details_page.html
@@ -61,7 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
       // Toggle this flag to switch between sandbox and production
-      const sandbox = true;
+      const sandbox = false;
 
       const sendOtpUrl = sandbox
         ? "/aadhaar/test-send-otp"
