--- a/app/templates/verify_mobile.html
+++ b/app/templates/verify_mobile.html
@@ -75,7 +75,7 @@
     </div>
 
     <script>
-      const USE_TWILIO = true;
+      const USE_TWILIO = false;
 
       const sendOtpUrl = USE_TWILIO
         ? "/verify-mobile-twilio"
